Use only IpInfo and IpId, and remove old types for dependencies